# AI-Receptionist

./: .env.example  .gitignore  Dockerfile  README.md  livekit.toml  main_saas.py  org_debug_dump.txt  package-lock.json  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  hospital.py  hotel.py  multitenant_hospital.py  registry.py  salon.py
backend/: .env.example  check_db.py  debug_call_api.py  debug_register.py  err.txt  generate_migration.py  migration_output.txt  requirements.txt  run_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_new_schema.py  50e89dd070cb_add_call_cost_table.py  72086ec03fc9_add_knowledge_document.py  (+1 more)
backend/app/: main.py
backend/app/core/: deps.py  (+3 more)
config/: __init__.py  env_validator.py  environments.md
database/: __init__.py  connection.py  health.py
frontend/: package-lock.json  package.json  tailwind.config.js
memory/: __init__.py  hospital_service.py  models.py  multitenant_service.py  salon_service.py  service.py
prompts/: __init__.py  templates.py
tools/: __init__.py  common.py  cost_tracker.py  email_service.py  otp_service.py  rag_client.py  session_logger.py
voice-frontend/: .env.example  .env.local  README.md  app-config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
voice-frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
voice-frontend/components/: audio-visualizer.tsx  chat-transcript.tsx  control-bar.tsx  main-page.tsx  session-view.tsx  welcome-view.tsx
voice-frontend/hooks/: use-agent-errors.tsx
(+90 files in other folders)
