[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-receptionist"
version = "0.1.0"
description = "LiveKit Agent"
dependencies = [
    "livekit",
    "livekit-agents",
    "livekit-plugins-cartesia",
    "livekit-plugins-deepgram",
    "livekit-plugins-openai",
    "livekit-plugins-silero"
]
